Comentários no Swagger e garantindo atomicidade no uso do BD.
